// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parseVersionByNpmPackageArg typescript 1`] = `
Object {
  "name": "typescript",
  "version": "latest",
}
`;

exports[`parseVersionByNpmPackageArg typescript@>= 1 & < 2 1`] = `
Object {
  "name": "typescript",
  "version": ">= 1 & < 2",
}
`;

exports[`parseVersionByNpmPackageArg typescript@1 1`] = `
Object {
  "name": "typescript",
  "version": "1",
}
`;
